syntax = "proto3";

option csharp_namespace = "GrpcSystem";

package UserApi;

service UserGrpc {
	rpc CheckUsernameAndPassword(CheckUsernameAndPasswordRequest) returns (UserDTO) {}
	rpc GetUserById(IdRequest) returns (UserDTO) {};
	rpc GetUserMenusAndPermissions(IdRequest) returns (MenusAndPermissionDTO) {};
}

message IdRequest {
	string id = 1;
}

message CheckUsernameAndPasswordRequest {
	string username = 1;
	string password = 2;
}

message UserDTO {
	string userId = 1;
	string username = 2;
}

message MenusAndPermissionDTO {
	repeated MenuDTO menus = 1;
	repeated PermissionDTO permissions = 2;
}

message MenuDTO {
	string code = 1;
	string path = 2;
	string name = 3;
	string icon = 4;
	bool isLeaf = 5;
	repeated MenuDTO children = 6;
}

message PermissionDTO {
	string code = 1;
	string menuCode = 2;
	string name = 3;
}